upto relations like one to many, many to one and crud operations completed with swagger setup and initailize in all
