# src/controller/library.controller.ts
@@ -3,10 +3,16 @@ import { Request,Response, NextFunction } from "express";
 import { library } from "../entity/library";
 import { AppError } from "../utils/AppError";
 import { AppDataSource } from "../data-source";
+import { Student } from "../entity/student";
 
 const libraryRepo= AppDataSource.getRepository(library)
+const StudentRepo=AppDataSource.getRepository(Student)
+    //#swagger.tags=['library']
+
 
 export const getdata_librarydata = async (req:Request, res:Response, next:NextFunction)=>{
+    //#swagger.tags=['library']
+
     try{
         await libraryRepo.find().then(result =>{
             res.status(200).json({
@@ -27,13 +33,18 @@ export const getdata_librarydata = async (req:Request, res:Response, next:NextFu
 }
 
 export const postdata_librarydata = async(req:Request, res:Response, next:NextFunction)=>{
+    //#swagger.tags=['library']
+
     try{
+        let student=await StudentRepo.findOneBy({id:req.body.student})
+        req.body.student=student
         await libraryRepo.save(req.body).then(result=>{
             res.status(200).json({
                 message:"library data has been posted successfully",
                 data:result
             })
         }).catch(error=>{
+            console.log(error)
             res.status(400).json({
                 message:"Error posting library data"
             })
@@ -47,6 +58,8 @@ export const postdata_librarydata = async(req:Request, res:Response, next:NextFu
 }
 
 export const deletedata_librarydata = async(req:Request,res:Response,next:NextFunction)=>{
+    //#swagger.tags=['library']
+
     try{
         let data = await libraryRepo.findOneBy({ id: req.params.id })
         if(!data){
@@ -68,6 +81,8 @@ export const deletedata_librarydata = async(req:Request,res:Response,next:NextFu
 }
 
 export const updatedata_librarydata= async(req:Request,res:Response,next:NextFunction)=>{
+    //#swagger.tags=['library']
+
     try{
         let data = await libraryRepo.findOneBy({id: req.params.id})
         if(!data){
